<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/question_creator"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/questionText"
        android:layout_marginBottom="10dp"
        android:hint="@string/text_of_question"
        android:inputType="text"
        android:singleLine="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/questionFirstOptionIsCorrect"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:checked="true"
            android:layout_marginRight="10dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/questionFirstOption"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/questionFirstOptionIsCorrect"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:hint="@string/first_option"
            android:singleLine="true"
            android:inputType="text" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/questionSecondOptionIsCorrect"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:checked="false"
            android:layout_marginRight="10dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/questionSecondOption"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/questionSecondOptionIsCorrect"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:hint="@string/second_option"
            android:singleLine="true"
            android:inputType="text" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/questionThirdOptionIsCorrect"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:checked="false"
            android:layout_marginRight="10dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/questionThirdOption"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/questionThirdOptionIsCorrect"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:hint="@string/third_option"
            android:singleLine="true"
            android:inputType="text" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/questionFourthOptionIsCorrect"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:checked="false"
            android:layout_marginRight="10dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/questionFourthOption"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/questionFourthOptionIsCorrect"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:hint="@string/fourth_option"
            android:singleLine="true"
            android:inputType="text" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/questionList"
            android:layout_below="@+id/questionAddButton"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_add"
            android:id="@+id/questionAddButton"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_delete"
            android:id="@+id/questionDeleteButton"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/questionAddButton"
            android:layout_toStartOf="@+id/questionAddButton" />
    </RelativeLayout>

</LinearLayout>