<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.QuizzesListFragment">

    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tagFilterEditText"
            android:digits="abcdefghijklmnopqrstuvwxyz1234567890"
            android:inputType="text|none"
            android:layout_alignBottom="@+id/tagFilterButton"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/tagFilterButton"
            android:layout_toStartOf="@+id/tagFilterButton"
            android:layout_marginRight="10dp"
            android:singleLine="true"
            android:hint="@string/type_tag_name" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter"
            android:id="@+id/tagFilterButton"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sortTypesSpinner"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/loading"
        android:id="@+id/quizzesListStatus"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:visibility="gone" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/quizzesListView"
        android:choiceMode="singleChoice"
        android:layout_margin="10dp" />

</LinearLayout>
