<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <TextView
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="0"
        android:id="@+id/quizzesListCounter"
        android:textColor="#ffffff"
        android:background="@color/colorPrimary"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:textAlignment="center"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/quiz_name"
        android:id="@+id/quizzesListName"
        android:singleLine="true"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/quiz_avg"
        android:id="@+id/quizzesListAvgLabel"
        android:layout_below="@+id/quizzesListName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="0%"
        android:id="@+id/quizzesListAvg"
        android:layout_below="@+id/quizzesListCounter"
        android:layout_toRightOf="@+id/quizzesListAvgLabel"
        android:layout_toEndOf="@+id/quizzesListAvgLabel"
        android:layout_marginLeft="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/quiz_best"
        android:id="@+id/quizzesListBestLabel"
        android:layout_alignTop="@+id/quizzesListAvg"
        android:layout_toRightOf="@+id/quizzesListAvg"
        android:layout_toEndOf="@+id/quizzesListAvg"
        android:layout_marginLeft="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="0%"
        android:id="@+id/quizzesListBest"
        android:layout_alignTop="@+id/quizzesListBestLabel"
        android:layout_toRightOf="@+id/quizzesListBestLabel"
        android:layout_toEndOf="@+id/quizzesListBestLabel"
        android:layout_marginLeft="5dp" />

</RelativeLayout>