<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.kamillis.quizy.fragments.QuizInfoFragment"
    android:gravity="center_vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/quiz_name"
        android:id="@+id/quizInfoName"
        android:singleLine="true"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="40dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_below="@+id/quizInfoName"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/quiz_avg_label"
                android:id="@+id/quizInfoAvgLabel"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/imageViewAvg"
                android:layout_toEndOf="@+id/imageViewAvg"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageViewAvg"
                android:src="@drawable/ic_equalizer_black_18dp"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="0.0%"
                android:id="@+id/quizInfoAvg"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/quizInfoAvgLabel"
                android:layout_toEndOf="@+id/quizInfoAvgLabel"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageViewBest"
                android:src="@drawable/ic_star_rate_black_18dp"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="0.0%"
                android:id="@+id/quizInfoBest"
                android:textStyle="bold"
                android:layout_alignBaseline="@+id/quizInfoBestLabel"
                android:layout_alignBottom="@+id/quizInfoBestLabel"
                android:layout_toRightOf="@+id/quizInfoBestLabel"
                android:layout_toEndOf="@+id/quizInfoBestLabel"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/quiz_best_label"
                android:id="@+id/quizInfoBestLabel"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/imageViewBest"
                android:layout_toEndOf="@+id/imageViewBest"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageViewPlayers"
                android:src="@drawable/ic_supervisor_account_black_18dp"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/quiz_counter_label"
                android:id="@+id/quizInfoCounterLabel"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/imageViewPlayers"
                android:layout_toEndOf="@+id/imageViewPlayers"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="0"
                android:id="@+id/quizInfoCounter"
                android:textStyle="bold"
                android:layout_alignBaseline="@+id/quizInfoCounterLabel"
                android:layout_alignBottom="@+id/quizInfoCounterLabel"
                android:layout_toRightOf="@+id/quizInfoCounterLabel"
                android:layout_toEndOf="@+id/quizInfoCounterLabel"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageViewNoQ"
                android:src="@drawable/ic_question_answer_black_18dp"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/quiz_no_questions_label"
                android:id="@+id/quizInfoNoQuestionsLabel"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/imageViewNoQ"
                android:layout_toEndOf="@+id/imageViewNoQ"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="1"
                android:id="@+id/quizInfoNoQuestions"
                android:textStyle="bold"
                android:layout_alignBaseline="@+id/quizInfoNoQuestionsLabel"
                android:layout_alignBottom="@+id/quizInfoNoQuestionsLabel"
                android:layout_toRightOf="@+id/quizInfoNoQuestionsLabel"
                android:layout_toEndOf="@+id/quizInfoNoQuestionsLabel"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageViewAlarm"
                android:src="@drawable/ic_alarm_black_18dp"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/quiz_timelimit_label"
                android:id="@+id/quizInfoTimeLimitLabel"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/imageViewAlarm"
                android:layout_toEndOf="@+id/imageViewAlarm"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="30s"
                android:id="@+id/quizInfoTimeLimit"
                android:textStyle="bold"
                android:layout_alignBaseline="@+id/quizInfoTimeLimitLabel"
                android:layout_alignBottom="@+id/quizInfoTimeLimitLabel"
                android:layout_toRightOf="@+id/quizInfoTimeLimitLabel"
                android:layout_toEndOf="@+id/quizInfoTimeLimitLabel"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp" />
        </RelativeLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_button"
        android:id="@+id/quizStartButton"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

</RelativeLayout>
